// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput rendering renders expected elements 1`] = `
<Layer
  className="DateInput"
>
  <input
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={
      {
        "icon": [],
        "iconName": "calendar",
        "prefix": "far",
      }
    }
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;

exports[`DateInput rendering renders expected elements when calendarTime is set 1`] = `
<Layer
  className="DateInput"
>
  <input
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={
      {
        "icon": [],
        "iconName": "calendar",
        "prefix": "far",
      }
    }
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal
    container={
      {
        "tag": "body",
      }
    }
  >
    <Calendar
      className="DateInput__calendar"
      onChange={[Function]}
      value={1000}
    />
  </React.Portal>
</Layer>
`;

exports[`DateInput rendering renders expected elements when className is set 1`] = `
<Layer
  className="DateInput TestClass"
>
  <input
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={
      {
        "icon": [],
        "iconName": "calendar",
        "prefix": "far",
      }
    }
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;

exports[`DateInput rendering renders expected elements when value is set 1`] = `
<Layer
  className="DateInput"
>
  <input
    className="DateInput__input"
    onChange={[Function]}
    type="text"
    value="foo"
  />
  <IconButton
    aria-label="Change date, foo"
    className="DateInput__icon"
    icon={
      {
        "icon": [],
        "iconName": "calendar",
        "prefix": "far",
      }
    }
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;
